Store ephemeral users into local state

Currently ephemeral users are not stored into local state at all. It
works bad in case Chrome crashes (or restarts) inside the session. E.g.
Chrome could not find for which user session should be restored.
This change puts data for ephemeral users into local state and wipes on
logout.

BUG=chromium:843163
TEST=TBD

Change-Id: Ice425c63ca74a0d4862e5f05ff869de185da5e6e
Reviewed-on: https://chromium-review.googlesource.com/1059785
Commit-Queue: Roman Sorokin <rsorokin@chromium.org>
Reviewed-by: Alexander Alekseev <alemate@chromium.org>
Cr-Commit-Position: refs/heads/master@{#559467}
Former-commit-id: 563d76ea0f56a0eeab4d4ecdc80fcd8008300f82