components/user_manager/known_user.h
@@ -87,6 +87,15 @@ void USER_MANAGER_EXPORT
 SetGaiaIdMigrationStatusDone(const AccountId& account_id,
                              const std::string& subsystem);
 
+// Marks if user is ephemeral and should be removed on log out.
+void SetIsEphemeralUser(const AccountId& account_id, bool is_ephemeral);
+
+// Saves |account_id| into known users. Tries to commit the change on disk. Use
+// only if account_id is not yet in the known user list. Important if Chrome
+// crashes shortly after starting a session. Cryptohome should be able to find
+// known account_id on Chrome restart.
+void USER_MANAGER_EXPORT SaveKnownUser(const AccountId& account_id);
+
 // Updates |gaia_id| for user with |account_id|.
 // TODO(alemate): Update this once AccountId contains GAIA ID
 // (crbug.com/548926).
@@ -180,6 +189,9 @@ WasUserHomeMinimalMigrationAttempted(const AccountId& account_id);
 // Removes all user preferences associated with |account_id|.
 // Not exported as code should not be calling this outside this component
 void RemovePrefs(const AccountId& account_id);
+
+// Removes all ephemeral users.
+void CleanEphemeralUsers();
 
 // Clears kProfileEverInitialized for a user.
 void USER_MANAGER_EXPORT
